# so5-wont-compile-tests

./: .gitignore  CMakeLists.txt  LICENSE  README.md  externals.rb
tests/: CMakeLists.txt
tests/message_limits/: CMakeLists.txt
tests/message_limits/default_limit_then_transform/: CMakeLists.txt
tests/message_limits/default_limit_then_transform_2/: CMakeLists.txt
tests/message_limits/default_limit_then_transform_3/: CMakeLists.txt
tests/message_limits/default_limit_then_transform_4/: CMakeLists.txt
tests/message_limits/nonconst_ref_to_immutable_msg/: CMakeLists.txt
tests/message_limits/nonconst_ref_to_immutable_msg_2/: CMakeLists.txt
tests/mutable_msg/: CMakeLists.txt
tests/mutable_msg/immutable_msg_as_argument/: CMakeLists.txt
tests/mutable_msg/mutable_msg_as_argument/: CMakeLists.txt
tests/mutable_msg/mutable_signal_send/: CMakeLists.txt  main.cpp
tests/mutable_msg/mutable_signal_subscribe/: CMakeLists.txt  main.cpp
tests/mutable_msg/mutable_signal_subscribe_lambda/: CMakeLists.txt  main.cpp
